<resources>
    <string name="app_name">SalaryReport</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="Rs">₹</string>
    <string name="add_values">Add values to the chart</string>
    <string name="alert_delete_multiple_account">Are you really want to delete selected Accounts.</string>
    <string name="alert_delete_multiple_transaction">Are you really want to delete selected Transactions.</string>
    <string name="alert_title">alert_title</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="backup_import_fail">Error! BackUp not Imported.</string>
    <string name="backup_import_success">BackUp Imported Successfully.</string>
    <string name="backup_mail_body">Dear Simple Accounting User,\nPlease Find Your DataBase backup file as attachment.\n\nIf you like to import data backup file in App from email then first download it from there to your mobile and copy it into SDCard --&gt; SimpleAccounting folder.\n\nThen you will be able to import this file from Recovery/Import option in App.</string>
    <string name="backup_mail_subject">Simple Accounting BackUp File</string>
    <string name="backup_success">Backup Done Successfully.</string>
    <string name="both_exprort">Export to Report</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="btn_AddReminder">Add Reminder</string>
    <string name="btn_Add_Credit">Add Credit</string>
    <string name="btn_Add_Debit">Add Debit</string>
    <string name="btn_Add_Details">ADD Details</string>
    <string name="btn_Cancel">Cancel</string>
    <string name="btn_ChangePass">Change Password</string>
    <string name="btn_Create_Account">Create Account</string>
    <string name="btn_Delete">Delete</string>
    <string name="btn_Edit">Edit</string>
    <string name="btn_Go">Go</string>
    <string name="btn_Ok">OK</string>
    <string name="btn_Save">Save</string>
    <string name="btn_Send">Send</string>
    <string name="btn_Settle_All">Settle All Accounts</string>
    <string name="btn_Share">Share</string>
    <string name="btn_Submit">Submit</string>
    <string name="btn_admin_screen">Options</string>
    <string name="btn_home_screen">Home</string>
    <string name="btn_map">View Chart</string>
    <string name="btn_open_camera">Open Camera</string>
    <string name="btn_open_gallery">Open Gallery</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="cleanupMaxAgePrefDefValue">0</string>
    <string name="cleanupMaxNumberPrefDefValue">0</string>
    <string name="cleanupTotalSizePrefDefValue">0</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm_settle_balance">Do you want to settle account with Balance. This will left single entry of total balance amount of this account.</string>
    <string name="confirm_settle_zero">Do you want to settel account. This will remove all transactions of this account.</string>
    <string name="default_web_client_id">849453436742-bv7c3a9aai22qjhimlusrg2sohlcmpq3.apps.googleusercontent.com</string>
    <string name="dollar">$</string>
    <string name="done">Done</string>
    <string name="download">Download</string>
    <string name="drawer_close">Navigation drawer Close</string>
    <string name="drawer_open">Open drawer navigation</string>
    <string name="drop_box">DropBox</string>
    <string name="dropbox">dropbox</string>
    <string name="err_settle_equal_amount">Your credit and debit balance are equal. You can not settle account with balance amount.</string>
    <string name="eula_accept">Accept</string>
    <string name="eula_refuse">Decline</string>
    <string name="eula_title">Agreement</string>
    <string name="euro">€</string>
    <string name="exel_exprort">Export to Excel</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="firebase_database_url">https://adsl-simpleaccouting.firebaseio.com</string>
    <string name="fragment_my_apps">This is MyApps</string>
    <string name="fragment_shop_apps">This is ShopApps</string>
    <string name="fragment_tab_one">This is One</string>
    <string name="fragment_tab_three">This is Three</string>
    <string name="fragment_tab_two">This is Two</string>
    <string name="gcm_defaultSenderId">849453436742</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="google_api_key">AIzaSyCcgVKrGllpkv3lZcRtlRhDNlu9XlIThg8</string>
    <string name="google_app_id">1:849453436742:android:2ea9d3f8001d9ea0</string>
    <string name="google_crash_reporting_api_key">AIzaSyCcgVKrGllpkv3lZcRtlRhDNlu9XlIThg8</string>
    <string name="google_storage_bucket">adsl-simpleaccouting.appspot.com</string>
    <string name="header">User</string>
    <string name="hintTxtItem">Enter category here...</string>
    <string name="hint_pass">Password</string>
    <string name="hint_user_name">User name</string>
    <string name="insuffice_space">Insufficient memory</string>
    <string name="lblBtnAdd">Add</string>
    <string name="menu_settings">Settings</string>
    <string name="msg_21_account">This backup file contains more then 21 accounts. It can not be Import in Free version of Simple Accounting App. if you want to overcome this limitation please buy pro version of this app.</string>
    <string name="msg_backup">It seems a long time you have not been backed up. Please backups your data.</string>
    <string name="msg_backup_fail">Error! Backup failed.</string>
    <string name="msg_backup_success">Backup Done Successfully at path %1$s. Are you want to send this backup file to your email id?</string>
    <string name="msg_delete_files">Are you want to delete selected files.</string>
    <string name="msg_import_file">Are you want to Import select file %1$s.</string>
    <string name="msg_import_old_backup">Old Backup Found. Do you want to import it?</string>
    <string name="msg_no_item_delete">No item selected.</string>
    <string name="new_series">New series</string>
    <string name="no_sd_card">sd card not available</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="pdf_exprort">Export to PDF</string>
    <string name="permission_contact">Please enable Contact Permission from Setting-&gt;Apps-&gt;Simple Accounting-&gt;Permissions option.</string>
    <string name="permission_phone">Please enable Phone Permission from Setting-&gt;Apps-&gt;Simple Accounting-&gt;Permissions option.</string>
    <string name="permission_sms">Please enable SMS Permission from Setting-&gt;Apps-&gt;Simple Accounting-&gt;Permissions option.</string>
    <string name="permission_storage">Please enable Storage Permission from Setting-&gt;Apps-&gt;Simple Accounting-&gt;Permissions option.</string>
    <string name="pound">£</string>
    <string name="project_id">adsl-simpleaccouting</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="sAutomaticBackup">Automative Setting</string>
    <string name="sMaxAgeOfRecordings">Auto Generete PDF</string>
    <string name="sMaxAgeOfRecordingsDlgMsg">Enter a value in days (0 - no limit)</string>
    <string name="search">Search</string>
    <string name="title_activity_settle_account">Settle Account</string>
    <string name="title_activity_web_server">Browse On Computer</string>
    <string name="txt_As_on_Date">As on Date</string>
    <string name="txt_Balance">Balance</string>
    <string name="txt_Calculator">Calculator</string>
    <string name="txt_Credit">Credit</string>
    <string name="txt_Date">Date</string>
    <string name="txt_Debit">Debit</string>
    <string name="txt_Email">Email</string>
    <string name="txt_Mobile">Mobile No</string>
    <string name="txt_Name">Name</string>
    <string name="txt_Narration">Narration</string>
    <string name="txt_Remark">Remark</string>
    <string name="txt_add">Add</string>
    <string name="txt_balance_amount">Balance Amount</string>
    <string name="txt_call">Call</string>
    <string name="txt_category">Category</string>
    <string name="txt_contact">Contact</string>
    <string name="txt_ledger">Account Ledger</string>
    <string name="txt_mult">Multiple</string>
</resources>