<?xml version="1.0" encoding="utf-8"?>
<LinearLayout n1:orientation="vertical" n1:id="@id/ll_top" n1:background="@drawable/row_radius" n1:padding="8.0dip" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_marginBottom="5.0dip"
  xmlns:n1="http://schemas.android.com/apk/res/android">
    <RelativeLayout n1:layout_width="fill_parent" n1:layout_height="wrap_content">
        <TextView n1:textSize="@dimen/s_name_size" n1:textStyle="bold" n1:textColor="@color/s_name_color" n1:id="@id/txt_sname" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="Test" n1:maxLines="1" n1:layout_toLeftOf="@id/txt_email" n1:layout_alignParentLeft="true" />
        <TextView n1:textSize="@dimen/s_email_size" n1:textColor="@color/s_details_color" n1:id="@id/txt_email" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="test@gmailcom" n1:maxLines="1" n1:layout_alignParentRight="true" n1:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_marginTop="@dimen/s_details_mar_top">
        <TextView n1:textSize="@dimen/s_email_size" n1:textColor="@color/s_details_color" n1:id="@id/txt_phone_no" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/txt_balance_amount" n1:maxLines="1" n1:layout_alignParentLeft="true" />
        <TextView n1:textSize="@dimen/s_email_size" n1:textColor="@color/s_details_color" n1:id="@id/txt_city" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="test2@gmailcom" n1:maxLines="1" n1:layout_alignParentRight="true" />
    </RelativeLayout>
    <View n1:background="@color/s_details_color" n1:layout_width="fill_parent" n1:layout_height="1.0px" n1:layout_marginTop="@dimen/s_details_mar_top" />
    <RelativeLayout n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_marginTop="@dimen/s_details_mar_top">
        <LinearLayout n1:orientation="horizontal" n1:layout_width="fill_parent" n1:layout_height="wrap_content">
            <TextView n1:textSize="@dimen/s_email_size" n1:textColor="@color/s_header_details_color" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/txt_Date" n1:maxLines="1" n1:layout_toLeftOf="@id/txt_semail1" n1:layout_alignParentLeft="true" />
            <TextView n1:textSize="@dimen/s_email_size" n1:textColor="@color/s_details_color" n1:id="@id/txt_date" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_marginLeft="@dimen/s_details_mar_left" n1:text="1" n1:maxLines="1" n1:layout_toLeftOf="@id/txt_semail1" />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout n1:orientation="horizontal" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_marginTop="@dimen/s_details_mar_top">
        <TextView n1:textSize="@dimen/s_email_size" n1:textColor="@color/s_header_details_color" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/txt_Narration" n1:maxLines="1" n1:layout_toLeftOf="@id/txt_semail1" n1:layout_alignParentLeft="true" />
        <TextView n1:textSize="@dimen/s_email_size" n1:textColor="@color/s_details_color" n1:id="@id/txt_product" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_marginLeft="@dimen/s_details_mar_left" n1:text="Web Site" n1:maxLines="1" n1:layout_toLeftOf="@id/txt_semail1" />
    </LinearLayout>
    <LinearLayout n1:orientation="horizontal" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_marginTop="@dimen/s_details_mar_top">
        <TextView n1:textSize="@dimen/s_email_size" n1:textColor="@color/s_header_details_color" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/txt_Remark" n1:maxLines="1" n1:layout_toLeftOf="@id/txt_semail1" n1:layout_alignParentLeft="true" />
        <TextView n1:textSize="@dimen/s_email_size" n1:textColor="@color/s_details_color" n1:id="@id/txt_remark" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_marginLeft="@dimen/s_details_mar_left" n1:text="Rajeev" n1:maxLines="1" n1:layout_toLeftOf="@id/txt_semail1" />
    </LinearLayout>
</LinearLayout>